SEP3-68 finish bookmark add and fix navbar

--- a/Tier1/Tier1/BlazorAppTier1/Pages/PostPage/PostBookmark.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/PostPage/PostBookmark.razor
@@ -4,8 +4,10 @@
 @using Entities.Models
 @using Contracts
 
+
 @inject IPostService _postService;
 @inject NavigationManager Navigation
+
 
 @attribute [Authorize]
 
@@ -24,7 +26,7 @@
             <!--Right side-->
             
                 
-                <PostList postToShow="@postToShow"></PostList>
+                <PostList postToShow="@postToShow" userBookedList="@true"></PostList>
                 
                 <div class="row">
                     <div class="col-12 text-center mt-4 mt-sm-5">
@@ -51,7 +53,10 @@
     public int CurrentPage { get; set; }
     private string nextElement = string.Empty;
     private string backElement = string.Empty;
-
+    
+    
+    
+    public List<Post>? listOfBookedPosts = new List<Post>();
 
     protected override async Task OnInitializedAsync() {
         try
