--- a/Tier1/Tier1/BlazorAppTier1/Pages/PostPage/PostList.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/PostPage/PostList.razor
@@ -14,62 +14,61 @@
     @if (postToShow == null) {
         <p> Loading posts...</p>
     }else {
-        @foreach (var post in postToShow) {
-        <div class="col-sm-6 col-lg-4 mb-4">
-            <div class="candidate-list candidate-grid">
-                <div class="candidate-list-image">
-                    <img class="img-fluid" src="@post.Images" alt="">
-                </div>
-            <div class="candidate-list-details">
-                <div class="candidate-list-info">
-                    <div class="candidate-list-title">
-                        <h5>
-                            <a href="#" @onclick="@(() => Navigation.NavigateTo("/PostDetails/" + post.Id))">@post.Title</a>
-                        </h5>
+        
+        @foreach (var post in (userBookedList)?listOfBookedPosts:postToShow) {
+            <div class="col-sm-6 col-lg-4 mb-4">
+                <div class="candidate-list candidate-grid">
+                    <div class="candidate-list-image">
+                        <img class="img-fluid" src="@post.Images" alt="">
                     </div>
-                    <div class="candidate-list-option">
-                        <ul class="list-unstyled">
-                            <li>
-                                <i class="fas fa-user pr-1"></i>@post.Writer.GetName()
-                            </li>
-                            <li>
-                                <i class="fas fa-map-marker-alt pr-1"></i>@post.Address
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="candidate-list-favourite-time">
-                    <!--Bookmark-->
-                    <AuthorizeView>
-                        <Authorized>
-                            @if (listOfBookedPosts.Exists(t=>t.Id.Equals(post.Id)))
-                            {
+                    <div class="candidate-list-details">
+                        <div class="candidate-list-info">
+                            <div class="candidate-list-title">
+                                <h5>
+                                    <a class="link-primary" @onclick="@(() => Navigation.NavigateTo("/PostDetails/" + post.Id))">@post.Title</a>
+                                </h5>
+                            </div>
+                            <div class="candidate-list-option">
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <i class="fas fa-user pr-1"></i>@post.Writer.GetName()
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-map-marker-alt pr-1"></i>@post.Address
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="candidate-list-favourite-time">
+                            <!--Bookmark-->
+                            <AuthorizeView>
+                                <Authorized>
+                                    @if (listOfBookedPosts.Exists(t => t.Id.Equals(post.Id)))
+                                    {
 
-                                <a class="candidate-list-favourite order-2" @onclick="@((() => removeFav(post)))">
-                                    <i class="fa fa-heart"></i>
-                                </a>
-                            }
-                            else
-                            {
-                                <a class="candidate-list-favourite order-2" @onclick="@((() => addFav(post)))">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            }
-                        </Authorized>
-                        <NotAuthorized></NotAuthorized>
-                    </AuthorizeView>
-                    <span class="candidate-list-time order-1">
-                        <i class="far fa-clock pr-1"></i>@post.DateCreated.GetDate()
-                    </span>
+                                        <a class="candidate-list-favourite order-2" @onclick="@((() => removeFav(post)))">
+                                            <i class="fa fa-heart"></i>
+                                        </a>
+                                    }else
+                                    {
+                                        <a class="candidate-list-favourite order-2" @onclick="@((() => addFav(post)))">
+                                            <i class="far fa-heart"></i>
+                                        </a>
+                                    }
+                                </Authorized>
+                                <NotAuthorized></NotAuthorized>
+                            </AuthorizeView>
+                            <span class="candidate-list-time order-1">
+                                <i class="far fa-clock pr-1"></i>@post.DateCreated.GetDate()
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-}
+        }
+    }
+</div>
 
-                    }
-
-                </div>
 @if (showModal)
     {
         <Modal>
@@ -77,11 +76,14 @@
             <button @onclick="@Proceed" class="btn btn-primary">Okay!</button>
         </Modal>
     }
+
 @code {
     private bool showModal;
     [Parameter]
     public List<Post> postToShow { get; set; }
-
+    [Parameter]
+    public bool userBookedList { get; set; }
+    
     public List<Post>? listOfBookedPosts = new List<Post>();
     [CascadingParameter]
     public Task<AuthenticationState> AuthState { get; set; } = null!;
@@ -100,6 +102,7 @@
                 _user = await _UserService.GetUserAsync(user.Identity.Name);
             }
             listOfBookedPosts = await _BookmarkService.getListOfBookedElements(_user.Username);
+            
         }
         catch (Exception e)
         {
@@ -145,10 +148,9 @@
         }
     }
     
-    private void Proceed()
+    private async Task Proceed()
     {
         showModal = false;
         Navigation.NavigateTo(Navigation.Uri,true);
     }
-
 }
