--- a/Tier1/Tier1/BlazorAppTier1/Pages/UIElements/Comments.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/UIElements/Comments.razor
@@ -10,11 +10,10 @@ else {
             @foreach (var comment in CommentsToShow) {
                 <div class="col-md-8">
                     <div class="media g-mb-30 media-comment">
-                        <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Image Description">
                         <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
                             <div class="g-mb-15">
-                                <h5 class="h5 g-color-gray-dark-v1 mb-0 " @onclick="@(() => PressedUser.InvokeAsync(comment.Writer.Username))">@comment.Writer.FirstName @comment.Writer.LastName</h5>
-                                <span class="g-color-gray-dark-v4 g-font-size-12">@comment.DateCreated.GetDate()</span>
+                                <h5 class="h5 mb-0 fullname " @onclick="@(() => PressedUser.InvokeAsync(comment.Writer.Username))">@comment.Writer.FirstName @comment.Writer.LastName</h5>
+                                <span class=" g-font-size-12">@comment.DateCreated.GetDate()</span>
                             </div>
 
                             <p>
@@ -23,13 +22,13 @@ else {
 
                             <ul class="list-inline d-sm-flex my-0">
                                 <li class="list-inline-item g-mr-20">
-                                    <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                                    <a class="u-link-v5  g-color-primary--hover" href="#!">
                                         <i class="fa fa-thumbs-up g-pos-rel g-top-1 g-mr-3"></i>
                                         178
                                     </a>
                                 </li>
                                 <li class="list-inline-item g-mr-20">
-                                    <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                                    <a class="u-link-v5 g g-color-primary--hover" href="#!">
                                         <i class="fa fa-thumbs-down g-pos-rel g-top-1 g-mr-3"></i>
                                         34
                                     </a>
@@ -52,6 +51,8 @@ else {
     [Parameter]
     public List<Comment>? CommentsToShow { get; set; }
 
+    // Just to make that when someone presses the user. it redirects to the profile of that user.
+    // for later purposes
     [Parameter]
     public EventCallback<string> PressedUser { get; set; }
 
